--- a/index.html
+++ b/index.html
@@ -2,11 +2,345 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
+    <title>Техномарт</title>
   </head>
   <body>
+    <header class="main-header">
+      <div class="user-block">
+        <div class="ser-block__container">
+          <div  class="ser-block__name-site">Техномарт</div>
+            <form action="#" method="get">
+              <input type="submit" value="Поиск">
+            </form>
+              <ul class="user-block__panel">
+                <li>
+                  <a class="user-block__bookmark" href="#top">Закладки:0</a>
+                </li>
+                <li>
+                  <a class="user-block__basket" href="#">Корзина</a>
+                </li>
+                <li>
+                  <a  class="user-block__booking" href="#">Оформить Заказ</a>
+                </li>
+              </ul>
+          </div>
+        </div>
+        <div class="container">
+          <div class="informaition-block">
+       	    <div class="informaition-block__summary">
+       	      <p>нтернет-магазин строительных материалов и инструментов для ремонта</p>
+       	    </div>
+       	    <div class="informaition-block__contact">
+       	    <div class="informaition-block__phone">+7(812)555-05-55</div>
+       	      <p>г. Санкт-петербург, ул. Б. Конюшенная, д.19/8</p>
+       	    </div>
+       	    <div class="informaition-block__user-contact">
+       	      <p>Равшан Джамшутович</p>
+       	    <form action="#" method="get">
+       	  	  <input type="image">
+       	    </form>
+              <ul class="informaition-block__data">
+                <li>
+       	          <a href="#">Мои заказы</a>
+                </li>
+                <li>
+       	          <a href="#">Личный кабинет</a>
+                </li>
+              </ul>
+       	    </div>
+          </div>
+        </div>
+          <div class="container">
+            <nav class="main-navigation">
+              <ul>
+                <li>
+                  <a href="#">Главная</a>
+                </li>
+                <li>
+                  <a href="#">Компания</a>
+                </li>
+                <li>
+                  <a href="#">Католог</a>
+                </li>
+                <li>
+                  <a href="#">Новости</a>
+                </li>
+                <li>
+                  <a href="#">Спецпредложения</a>
+                </li>
+                <li>
+                  <a href="#">Доставка</a>
+                </li>
+                <li>
+                  <a href="#">Контакты</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+    </header>
+    <div class="container">
+      <div class="main-content">
+        <div class="breadcrumbs">
+          <ul>
+            <li>
+              <a href="#" name="icon"><img src="images/sample.gif" width="50" 
+               height="50" alt="Главная страница"></a>
+              </li>
+              <li>
+                <a href="#">Каталог</a>
+              </li>
+              <li>
+                <a href="#">Инструмент</a>
+              </li>
+              <li>
+                <a href="#">Перфораторы</a>
+              </li>
+          <ul>
+        </div>
+      <div class="main-content__perforators">
+        <h1>Перфораторы<h1>
+      </div>
+      <div class="main-content__sidbare">
+        <div class="sidbare__filter">
+          <b>Фильтр:<b>
+        </div>
+          <h3>цена:</h3>
+      <div class="sidbare__price-category"></div>
+       <div class="sidbare__from">0</div>
+       <b class="sidbare__hyphen">-</b>
+       <div class="sidbare__to">3000</div>
+        <hr>
+      <div class="maker">
+        <h3>Производители</h3>
+          <ul class="sidbare__maker-list">
+            <li>
+              <input type="checkbox" checked><label>BOSCH</label>
+            </li>
+            <li>
+              <input type="checkbox"><label>Интерскол</label>
+            </li>
+            <li>
+              <input type="checkbox" checked><label>MAKITA</label>
+            </li>
+            <li>
+              <input type="checkbox"><label>DEWALT</label>
+            </li>
+            <li>
+              <input type="checkbox"><label>HITACHI</label>
+            </li>
+          </ul>
+    </div>
+        <hr>
+      <div class="main-content__power-supply">
+        <h3>Питание:</h3>
+        <ul class="main-content__supply">
+          <li>
+            <input type="checkbox" checked>АККУМУЛЯТОРНЫЕ
+          </li>
+          <li>
+            <input type="checkbox">СЕТЕВЫЕ
+          </li>
+        </ul>
+      </div>
+        <button type="submit" value="Показать">
+    </div>
+    <div class="catalog-content">
+      <div class="sorting">
+        <b class="word-sorting">сортировка:</b>
+        <ul>
+          <li>
+            <a href="#">По цене</a>
+            <a href="#">По типу</a>
+            <a href="#">По функционалу</a>
+          </li>
+        </ul> 
+      </div>
+    <div class="main-content__catalog-list">
+      <article class="catalog-list__item">
+          <span>NEW</span>
+          <img src="#" width="#" height="#">
+          <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
+          <div class="item__old-price">22500 P.</div>
+          <div class="item__price">15500 P.</div>
+          <div class="item__hidden"></div>
+            <a href="#">КУПИТЬ</a>
+            <a href="#">В ЗАКЛАДКИ</a>
+          </div>
+        </article>
+        <article class="catalog-list__item">
+          <span>NEW</span>
+          <img src="#" width="#" height="#">
+          <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
+          <div class="item__old-price">30500 P.</div>
+          <div class="item__price">25500 P.</div>
+          <div class="item__hidden"></div>
+            <a href="#">КУПИТЬ</a>
+            <a href="#">В ЗАКЛАДКИ</a>
+          </div>
+        </article>
+        <article class="catalog-list__item">
+          <span>NEW</span>
+          <img src="#" width="#" height="#">
+          <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
+          <div class="item__price">12500 P.</div>
+          <div class="item__hidden"></div>
+            <a href="#">КУПИТЬ</a>
+            <a href="#">В ЗАКЛАДКИ</a>
+          </div>
+        </article>
+        <article class="catalog-list__item">
+        <span>NEW</span>
+          <img src="#" width="#" height="#">
+          <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
+          <div class="item__old-price">22500 P.</div>
+          <div class="item__price">15500 P.</div>
+          <div class="item__hidden"></div>
+            <a href="#">КУПИТЬ</a>
+            <a href="#">В ЗАКЛАДКИ</a>
+          </div>
+        </article>
+        <article class="catalog-list__item">
+          <span>NEW</span>
+          <img src="#" width="#" height="#">
+          <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
+          <div class="item__old-price">30500 P.</div>
+          <div class="item__price">25500 P.</div>
+          <div class="item__hidden"></div>
+            <a href="#">КУПИТЬ</a>
+            <a href="#">В ЗАКЛАДКИ</a>
+          </div>
+        </article>
+        <article class="catalog-list__item">
+          <span>NEW</span>
+          <img src="#" width="#" height="#">
+          <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
+          <div class="item__price">12500 P.</div>
+          <div class="item__hidden"></div>
+            <a href="#">КУПИТЬ</a>
+            <a href="#">В ЗАКЛАДКИ</a>
+          </div>
+          <article>
+        <span>NEW</span>
+          <img src="#" width="#" height="#">
+          <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
+          <div class="item__old-price">22500 P.</div>
+          <div class="item__price">15500 P.</div>
+          <div class="item__hidden"></div>
+            <a href="#">КУПИТЬ</a>
+            <a href="#">В ЗАКЛАДКИ</a>
+          </div>
+        </article>
+        <article class="catalog-list__item">
+          <span>NEW</span>
+          <img src="#" width="#" height="#">
+          <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
+          <div class="item__old-price">30500 P.</div>
+          <div class="item__price">25500 P.</div>
+          <div class="item__hidden"></div>
+            <a href="#">КУПИТЬ</a>
+            <a href="#">В ЗАКЛАДКИ</a>
+          </div>
+        </article>
+        <article class="catalog-list__item">
+          <span>NEW</span>
+          <img src="#" width="#" height="#">
+          <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
+          <div class="item__price">12500 P.</div>
+          <div class="item__hidden"></div>
+            <a href="#">КУПИТЬ</a>
+            <a href="#">В ЗАКЛАДКИ</a>
+          </div>
+        </article>
+        <article class="catalog-list__item">
+          <span>NEW</span>
+          <img src="#" width="#" height="#">
+          <a href="#"></a>
+          <div class="item__old-price"></div>
+          <div class="item__price"></div>
+          <div class="item__hidden"></div>
+            <a/>
+            <a/>
+          </div>
+        </article>
+               
+      <div class="main-content__paginator">
+        <a class="current" href="#">1</a>
+        <a href="#">2</a>
+        <a href="#">3</a>
+        <a href="#">СЛЕДУЮЩАЯ</a>
+      </div>
+    </div>
+  </div> 
+ </div>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive">Базовый HTML и CSS</a>».</p>
+ <section>
+   <div class="block">
+    <div class="container">
+        <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
+        <p>Перфоратор-универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпече, бетоне и камне.<br>
+        Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молтка. В ассортиментном ряду есть выбор "трехрежимников": в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+    </div>
+   </div>
+ </section>
+<footer class="main-footer">
+  <section>
+     <div  class="main-footer__name-site">Техномарт</div>
+     <p class="address">г. Санкт-Петербург, ул.Б.Конюшенная, д.19.8<br>
+     +7 (812) 555-05-55</p>
+     <ul class="white">
+       <li>
+         <a href="#">Компания</a>
+       </li>
+       <li>
+         <a href="#">Новости</a>
+       </li>
+       <li>
+         <a href="#">Каталог</a>
+       </li>
+       <li>
+         <a href="#">Доставка</a>
+       </li>
+       <li>
+         <a href="#">Контакты</a>
+       </li>
+     </ul>
+     <ul class="yellow">
+      <li>
+        <a href="#">Материалы</a>
+      </li>
+      <li>
+        <a href="#">Техника</a>
+      </li>
+      <li>
+        <a href="#">Инструмент</a>
+      </li>
+      <li>
+        <a href="#">Спецпредложение</a>
+      </li>
+     </ul>
+</section>
+    
+      <div class="container">
+        <div class="informaition"> 
+          <p>2010-2016 Компания "Техномарт"<br>
+          Все права защищены</p>
+        </div>
+        <div class="share">
+            <b>Соцсети</b>
+            <a class="social social-vk" href="#"></a>
+            <a class="social social-fb" href="#"></a>
+            <a class="social social-in" href="#"></a>
+        </div>
+        <div class="contact">
+          <p>Обратная связь:</p>
+          <a href="#">mail@htmlacademy.ru</a>
+        </div>
+        <div class="author">
+          <p>Разработано-</p>
+          <a href="#">htmlacademy.ru</a>
+        </div>
+      </div>
+    </footer>
 
   </body>
 </html>
