мелкие доработки с фильтром

--- a/inner (2).html
+++ b/inner (2).html
@@ -82,7 +82,7 @@
         <div class="breadcrumbs">
           <ul>
             <li>
-              <a href="#" name="icon"><img src="images/sample.gif" width="50" height="50" alt="Главная страница"></a>
+              <a href="#" name="icon"><img src="img/icon-home.png" width="15"height="12" alt="Главная страница"></a> 
               </li>
               <li>
                 <a href="#">Каталог</a>
@@ -122,8 +122,8 @@
       <div class="main-content__power-supply">
         <h3>Питание:</h3>
         <div class="main-content__supply">
-          <input type="radio" name="battery" value="АККУМУЛЯТОРНЫЕ" checked>
-          <input type="checkbox" name="network" value="СЕТЕВЫЕ">
+          <input type="radio" name="battery" value="accumulator" checked>АККУМУЛЯТОРНЫЕ
+          <input type="checkbox" name="battery" value="network">СЕТЕВЫЕ
         </div>
       </div>
         <button type="submit" value="Показать">
