--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <footer class="main-footer">
       <div class="container">
         <div class="contact-information">
-          <div class="contact-information__logo"><a href="#" class="header-top__logo">Техномарт</a></div>
+          <a href="#" class="ащщеук__logo">Техномарт</a>
           <div class="contact-information__address">г. Санкт-Петербург, ул.Б.Конюшенная, д.19.8<br>+7 (812) 555-05-55</div>
         </div>
         <div class="main-footer__menu">
