еще маленькие правки

--- a/index.html
+++ b/index.html
@@ -111,6 +111,20 @@
             <button class="materials__mini-block" type="submit" value="бесплатно">
             <img class="icon" src="img/Layer 100.png" height="72" width="59">
            </div>
+           <div class="slider__items">
+             <div class="slider__item">
+               <div class="catalog__info">
+                 <h2>ПЕРФОРАТОРЫ</h2>
+                 <p>Настоящие мужские игрушки</p>
+               </div>
+                 <a href="#" class="btn">Открыть каталог</a>
+             </div>
+             <div class="slider__item">
+               <h2>Дрели</h2>
+               <p>Соедям на радость</p>
+             </div>
+               <a href="#" class="btn">Открыть каталог</a>
+           </div>
           </div>
         </div>
       </div>
