--- a/inner (2).html
+++ b/inner (2).html
@@ -142,107 +142,107 @@
                 <li>
                   <a href="#"><img src="icon-up-dir.png" width="11" height="10"></a>
                 </li>
-                <li>
-                  <a href="#"><img src="down-dir.png" width="11" height="10"></a>
-                </li>
-              </ul> 
+              </ul>
+              <div class="catalog-sorting__guides">
+                <a href="#"><img src="down-dir.png" width="11" height="10"></a>
+              </div> 
+            </div>
+            <div class="catalog-list">
+              <article class="catalog-list__item">
+                <span class="item__banner">NEW</span>
+                <img src="img/snippet-18927 copy 3.jpg" height="112" width="127">
+                <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
+                <div class="item__old-price">22500 P.</div>
+                <div class="item__price">15500 P.</div>
+                <div class="item__hidden"></div>
+                  <a href="#">КУПИТЬ</a>
+                  <a href="#">В ЗАКЛАДКИ</a>
+              </article>
+              <article class="catalog-list__item">
+                <span class="item__banner">NEW</span>
+                <img src="img/snippet-945 copy 2.jpg" height="128" width="144">
+                <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
+                <div class="item__old-price">30500 P.</div>
+                <div class="item__price">25500 P.</div>
+                <div class="item__hidden"></div>
+                  <a href="#">КУПИТЬ</a>
+                  <a href="#">В ЗАКЛАДКИ</a>
+              </article>
+              <article class="catalog-list__item">
+                <span class="item__banner">NEW</span>
+                <img src="img/snippet-18927 copy 3.jpg" height="112" width="127">
+                <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
+                <div class="item__price">12500 P.</div>
+                <div class="item__hidden"></div>
+                  <a href="#">КУПИТЬ</a>
+                  <a href="#">В ЗАКЛАДКИ</a>
+              </article>
+              <article class="catalog-list__item">
+                <span class="item__banner">NEW</span>
+                <img src="img/snippet-18927 copy 3.jpg" height="112" width="127">
+                <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
+                <div class="item__old-price">22500 P.</div>
+                <div class="item__price">15500 P.</div>
+                <div class="item__hidden"></div>
+                  <a href="#">КУПИТЬ</a>
+                  <a href="#">В ЗАКЛАДКИ</a>
+              </article>
+              <article class="catalog-list__item">
+                <span class="item__banner">NEW</span>
+                <img src="img/snippet-945 copy 2.jpg" height="128" width="144">
+                <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
+                <div class="item__old-price">30500 P.</div>
+                <div class="item__price">25500 P.</div>
+                <div class="item__hidden"></div>
+                  <a href="#">КУПИТЬ</a>
+                  <a href="#">В ЗАКЛАДКИ</a>
+              </article>
+              <article class="catalog-list__item">
+                <span class="item__banner">NEW</span>
+                <img src="img/snippet-18927 copy 3.jpg" height="112" width="127">
+                <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
+                <div class="item__price">12500 P.</div>
+                <div class="item__hidden"></div>
+                  <a href="#">КУПИТЬ</a>
+                  <a href="#">В ЗАКЛАДКИ</a>
+              </article>
+              <article class="catalog-list__item">
+                <span>NEW</span>
+                <img src="img/snippet-18927 copy 3.jpg" height="112" width="127">
+                <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
+                <div class="item__old-price">22500 P.</div>
+                <div class="item__price">15500 P.</div>
+                <div class="item__hidden"></div>
+                  <a href="#">КУПИТЬ</a>
+                  <a href="#">В ЗАКЛАДКИ</a>
+              </article>
+              <article class="catalog-list__item">
+                <span class="item__banner">NEW</span>
+                <img src="img/snippet-945 copy 2.jpg" height="128" width="144">
+                <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
+                <div class="item__old-price">30500 P.</div>
+                <div class="item__price">25500 P.</div>
+                <div class="item__hidden"></div>
+                  <a href="#">КУПИТЬ</a>
+                  <a href="#">В ЗАКЛАДКИ</a>
+              </article>
+              <article class="catalog-list__item">
+                <span class="item__banner">NEW</span>
+                <img src="img/snippet-18927 copy 3.jpg" height="112" width="127">
+                <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
+                <div class="item__price">12500 P.</div>
+                <div class="item__hidden"></div>
+                  <a href="#">КУПИТЬ</a>
+                  <a href="#">В ЗАКЛАДКИ</a>
+              </article>
+              <div class="main-content__paginator">
+                <a class="current" href="#">1</a>
+                <a href="#">2</a>
+                <a href="#">3</a>
+                <a href="#">СЛЕДУЮЩАЯ</a>
+                </div>
             </div>
           </div>
-          <div class="catalog-list">
-              <article class="catalog-list__item">
-                <span>NEW</span>
-                <img src="img/snippet-18927 copy 3.jpg" height="112" width="127">
-                <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
-                <div class="item__old-price">22500 P.</div>
-                <div class="item__price">15500 P.</div>
-                <div class="item__hidden"></div>
-                  <a href="#">КУПИТЬ</a>
-                  <a href="#">В ЗАКЛАДКИ</a>
-              </article>
-              <article class="catalog-list__item">
-                <span>NEW</span>
-                <img src="img/snippet-945 copy 2.jpg" height="128" width="144">
-                <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
-                <div class="item__old-price">30500 P.</div>
-                <div class="item__price">25500 P.</div>
-                <div class="item__hidden"></div>
-                  <a href="#">КУПИТЬ</a>
-                  <a href="#">В ЗАКЛАДКИ</a>
-              </article>
-              <article class="catalog-list__item">
-                <span>NEW</span>
-                <img src="img/snippet-18927 copy 3.jpg" height="112" width="127">
-                <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
-                <div class="item__price">12500 P.</div>
-                <div class="item__hidden"></div>
-                  <a href="#">КУПИТЬ</a>
-                  <a href="#">В ЗАКЛАДКИ</a>
-              </article>
-              <article class="catalog-list__item">
-                <span>NEW</span>
-                <img src="img/snippet-18927 copy 3.jpg" height="112" width="127">
-                <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
-                <div class="item__old-price">22500 P.</div>
-                <div class="item__price">15500 P.</div>
-                <div class="item__hidden"></div>
-                  <a href="#">КУПИТЬ</a>
-                  <a href="#">В ЗАКЛАДКИ</a>
-              </article>
-              <article class="catalog-list__item">
-                <span>NEW</span>
-                <img src="img/snippet-945 copy 2.jpg" height="128" width="144">
-                <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
-                <div class="item__old-price">30500 P.</div>
-                <div class="item__price">25500 P.</div>
-                <div class="item__hidden"></div>
-                  <a href="#">КУПИТЬ</a>
-                  <a href="#">В ЗАКЛАДКИ</a>
-              </article>
-              <article class="catalog-list__item">
-                <span>NEW</span>
-                <img src="img/snippet-18927 copy 3.jpg" height="112" width="127">
-                <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
-                <div class="item__price">12500 P.</div>
-                <div class="item__hidden"></div>
-                  <a href="#">КУПИТЬ</a>
-                  <a href="#">В ЗАКЛАДКИ</a>
-              </article>
-              <article class="catalog-list__item">
-                <span>NEW</span>
-                <img src="img/snippet-18927 copy 3.jpg" height="112" width="127">
-                <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
-                <div class="item__old-price">22500 P.</div>
-                <div class="item__price">15500 P.</div>
-                <div class="item__hidden"></div>
-                  <a href="#">КУПИТЬ</a>
-                  <a href="#">В ЗАКЛАДКИ</a>
-              </article>
-              <article class="catalog-list__item">
-                <span>NEW</span>
-                <img src="img/snippet-945 copy 2.jpg" height="128" width="144">
-                <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
-                <div class="item__old-price">30500 P.</div>
-                <div class="item__price">25500 P.</div>
-                <div class="item__hidden"></div>
-                  <a href="#">КУПИТЬ</a>
-                  <a href="#">В ЗАКЛАДКИ</a>
-              </article>
-              <article class="catalog-list__item">
-                <span>NEW</span>
-                <img src="img/snippet-18927 copy 3.jpg" height="112" width="127">
-                <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
-                <div class="item__price">12500 P.</div>
-                <div class="item__hidden"></div>
-                  <a href="#">КУПИТЬ</a>
-                  <a href="#">В ЗАКЛАДКИ</a>
-              </article>
-            <div class="main-content__paginator">
-              <a class="current" href="#">1</a>
-              <a href="#">2</a>
-              <a href="#">3</a>
-              <a href="#">СЛЕДУЮЩАЯ</a>
-            </div>
-          </div>  
           <div class="catalog__little-about">
             <div class="container">
               <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
